--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -394,6 +394,12 @@ main.homepage blockquote {
 .list__footer-readmore.btn:hover {
   background-color: #174a84;
 }
+body {
+  font-family: "Assistant", sans-serif;
+}
+code, pre {
+  font-family: "IBM Plex Mono", monospace;
+}
 
 
 
