--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -263,7 +263,7 @@ main.homepage blockquote {
 }
 
 .sidebar-custom a {
-  color: #f5f5f5;
+  color: #1a73e8;
   text-decoration: none;
   transition: color 0.3s ease;
 }
