--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -153,7 +153,7 @@ textarea {
 .btn {
   display: inline-block;
   padding: 12px 28px;
-  background-color: ; /* Primary button background */
+  background-color:unset ; /* Primary button background */
   color: white;
   border-radius: 5px;
   font-weight: 600;
