--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -162,7 +162,7 @@ textarea {
   box-shadow: 0 6px 15px rgba(26, 115, 232, 0.4); /* Soft shadow for depth */
   transition: background-color 0.3s ease, box-shadow 0.3s ease; /* Smooth transitions */
   user-select: none; /* Prevent text selection on button */
-  border: none; /* Remove default border */
+  border: solid 0.5px #1a73e8; /* Remove default border */
 }
 
 .btn:hover {
