--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -269,7 +269,7 @@ main.homepage blockquote {
 }
 
 .sidebar-custom a:hover {
-  color: #ffffff;
+  color: #0c47a1;
 }
 /* עיצוב כללי לרשומות */
 .list__item.post {
