--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -891,12 +891,12 @@ button:not(:-moz-focusring):focus > .menu__btn-title {
 
 .tags__badge {
   float: left;
-  width: 32px;
-  height: 32px;
+  width: 45px;
+  height: 40px;
   padding: 8px;
   margin-right: 6px;
   background: var(--highlight-color); /* Badge background is highlight color */
-  fill: #fff;
+  fill: #1a73e8;
 }
 
 /* Table of Contents */
