--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -319,8 +319,8 @@ main.homepage blockquote {
 
 /* תקציר הפוסט */
 .list__excerpt.post__content {
-  font-size: 1rem;
-  color: #2c3e50;
+  font-size: 1.1rem;
+  color: #1a3e6e;
   line-height: 1.6;
   margin-bottom: 1.5rem;
 }
