--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,7 +69,7 @@ body {
   font-size: 1rem; /* Equivalent to 14px */
   line-height: 1.6; /* Standard line height for readability */
   word-wrap: break-word;
-  background: #f7f7f7; /* Light grey background for the body */
+  background: #fff; /* Light grey background for the body */
   -webkit-font-smoothing: antialiased; /* Enhance font rendering on WebKit */
 }
 
