--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -582,7 +582,7 @@ select {
   padding: 0;
   font: inherit;
   color: #fff;
-  background: #2a2a2a;
+  background: #00ACC1;
   border: 0;
   outline: 0;
 }
