--- a/layouts/home.html
+++ b/layouts/home.html
@@ -7,5 +7,8 @@
     </div>
   </section>
   {{ end }}
+
+  {{ partial "services_section.html" . }} <!-- כאן ה-Partial של השירותים נכלל -->
+
 </main>
 {{ end }}
