--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1823,3 +1823,22 @@ a.contact-link .contact-icon {
     font-size: 0.6875rem;
   }
 }
+.menu {
+    display: flex; /* הופך את ה-nav ל-flex container */
+    align-items: center; /* מיישר את הפריטים אנכית למרכז */
+    justify-content: space-between; /* מרווח שווה בין קבוצת התפריט (ul) ללוגו. הלוגו יהיה מימין, התפריט משמאל */
+    /* אם אתה רוצה שהלוגו יהיה צמוד לימין וכל התפריט משמאל לו, אפשר גם: */
+    /* justify-content: flex-start;  // מיישר את הכל לשמאל
+       flex-direction: row-reverse; // הופך את הסדר הוויזואלי - הלוגו יופיע ראשון מימין, אחריו התפריט */
+}
+
+/* אם כפתור התפריט (בורגר) נמצא מחוץ ל-ul ואתה רוצה שהוא יהיה משמאל,
+   וכשאתה רוצה שהלוגו וה-ul יהיו ביחד מימין:
+   אתה יכול לעטוף את ה-ul והלוגו ב-div נוסף ולתת ל-nav justify-content: space-between;
+   או לתת ללוגו ול-ul order ב-Flexbox
+*/
+
+/* דוגמה אם הלוגו והתפריט צריכים להיות קבוצה אחת שמתיישרת לימין והכפתור (בורגר) נשאר לשמאל: */
+.menu .menu__list {
+    margin-left: auto; /* ידחוף את הרשימה לימין */
+}
