--- a/layouts/partials/menu.html
+++ b/layouts/partials/menu.html
@@ -1,22 +1,23 @@
 {{- if .Site.Menus.main }}
 <nav class="menu">
-	<button class="menu__btn" aria-haspopup="true" aria-expanded="false" tabindex="0">
-		<span class="menu__btn-title" tabindex="-1">{{ T "menu_label" }}</span>
-	</button>
-	<ul class="menu__list">
-		{{- $currentNode := . }}
-		{{- range .Site.Menus.main }}
-		<li class="menu__item{{ if or ($currentNode.IsMenuCurrent "main" .) ($currentNode.HasMenuCurrent "main" .) }} menu__item--active{{ end }}">
-			<a class="menu__link" href="{{ .URL }}">
-				{{ .Pre }}
-				<span class="menu__text">{{ .Name }}</span>
-				{{ .Post }}
-			</a>
-		</li>
-		{{- end }}
-	</ul>
-    {{ partial "custom-logo" . }} <!- -- הלוגו יתווסף כאן, בתוך ה-nav -->
+  <button class="menu__btn" aria-haspopup="true" aria-expanded="false" tabindex="0">
+    <span class="menu__btn-title" tabindex="-1">{{ T "menu_label" }}</span>
+  </button>
+  <ul class="menu__list">
+    {{- $currentNode := . }}
+    {{- range .Site.Menus.main }}
+    <li class="menu__item{{ if or ($currentNode.IsMenuCurrent "main" .) ($currentNode.HasMenuCurrent "main" .) }} menu__item--active{{ end }}">
+      <a class="menu__link" href="{{ .URL }}">
+        {{ .Pre }}
+        <span class="menu__text">{{ .Name }}</span>
+        {{ .Post }}
+      </a>
+    </li>
+    {{- end }}
+  </ul>
+  {{ partial "custom-logo" . }} <!-- הלוגו יתווסף כאן, בתוך ה-nav -->
 </nav>
-{{ else -}}
+{{ else }}
 <div class="divider"></div>
 {{- end }}
+
