--- a/layouts/partials/menu.html
+++ b/layouts/partials/menu.html
@@ -15,7 +15,7 @@
     </li>
     {{- end }}
   </ul>
-  {{ partial "custom-logo" . }} <!-- הלוגו יתווסף כאן, בתוך ה-nav -->
+  {{ partial "custom-logo" . }} 
 </nav>
 {{ else }}
 <div class="divider"></div>
