--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -641,7 +641,7 @@ button:not(:-moz-focusring):focus > .menu__btn-title {
   padding: 10px 15px;
   padding: 0.725rem 1rem;
   font-weight: 600;
-  color: #fff;
+  color: #514c4c;
   text-transform: uppercase;
   font-size: 16px;
   
