--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1826,7 +1826,7 @@ a.contact-link .contact-icon {
 .menu {
     display: flex; /* הופך את ה-nav ל-flex container */
     align-items: center; /* מיישר את הפריטים אנכית למרכז */
-    justify-content: space-between; /* מרווח שווה בין קבוצת התפריט (ul) ללוגו. הלוגו יהיה מימין, התפריט משמאל */
+    justify-content: row-reverse; /* 
     background-color: white;
 }
 
